# Recommendation_System

./: .gitignore  README.md  feature_eng.py  pyproject.toml  recommenders.py  streamlit_UI.py  test.py
notebook/: 01_eda.ipynb  02_feature_engineering.ipynb  02_feature_engineering_embedding.ipynb  03_model_training copy.ipynb  03_model_training.ipynb  03_model_training_for_embedding.ipynb  04_evaluation.ipynb
src/: content_base_recommender.py  feature_engineering.py  hybrid_recommender.py  recommender.py  text_based_recommender.py  training.py
src/optimized_test/: recommender.py  text_based_recommender.py
src_1/: content_base_recommender.py  hybrid_recommender.py
